--- a/spendy/pom.xml
+++ b/spendy/pom.xml
@@ -38,6 +38,13 @@
       <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.itextpdf</groupId>
+      <artifactId>itextpdf</artifactId>
+      <version>5.5.13.3</version>
+    </dependency>
+
   </dependencies>
 
   <build>
